--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "expo-constants": "^17.1.6"
+    "expo-constants": "^17.1.6",
+    "expo-linear-gradient": "^14.1.4",
+    "nativewind": "^4.1.23"
   }
 }
